Fixen: Welsh language header overflow issue.

--- a/app/assets/stylesheets/components/_advert.scss
+++ b/app/assets/stylesheets/components/_advert.scss
@@ -1,12 +1,8 @@
 .advert {
   @include clearfix();
   padding: 0 $advert-padding;
-  margin: 0 0 $baseline-unit*6 0;
+  margin: $baseline-unit*2 0 $baseline-unit*6 0;
   background-color: $advert-background-color;
-
-  @include respond-to($mq-m) {
-    margin-top: $baseline-unit*15.5;
-  }
 }
 
 .advert__intro {
